--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
     "autoprefixer": "^10.4.19",
+    "nuxt-icon": "^0.6.10",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
