some mild testing on how does Nuxt backend work (it doesn't)

--- a/Sincero/package.json
+++ b/Sincero/package.json
@@ -17,7 +17,9 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "did-jwt": "^8.0.4",
+    "did-jwt-vc": "^4.0.4",
     "did-resolver": "^4.1.0",
+    "ethr-did": "^3.0.21",
     "ethr-did-resolver": "^10.1.9",
     "lucide-vue-next": "^0.383.0",
     "nuxt": "^3.11.2",
