added very simple web3 ethereum wallet connection
lot of unused stuff from the NuxtAuth module (used for authentication using GitHub)

--- a/Sincero/package.json
+++ b/Sincero/package.json
@@ -22,7 +22,7 @@
     "ethr-did": "^3.0.21",
     "ethr-did-resolver": "^10.1.9",
     "lucide-vue-next": "^0.383.0",
-    "nuxt": "^3.11.2",
+    "nuxt-security": "^2.0.0-rc.9",
     "radix-vue": "^1.8.3",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
@@ -31,10 +31,13 @@
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "web3": "^4.10.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@sidebase/nuxt-auth": "^0.7.2",
+    "nuxt": "^3.12.3",
     "nuxt-icon": "^0.6.10",
     "typescript": "^5.4.5"
   }
