--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nuxi": "^3.11.1"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "autoprefixer": "^10.4.19",
     "nuxt": "^3.12.2",
