--- a/Sincero/package.json
+++ b/Sincero/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.7.0",
+    "@radix-icons/react": "^1.0.0",
     "@vueuse/core": "^10.10.0",
     "axios": "^1.7.2",
     "base64-js": "^1.5.1",
