--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@noble/ed25519": "^2.1.0",
     "@stablelib/ed25519": "^1.0.3",
     "animate.css": "^4.1.1",
+    "cookie": "^0.6.0",
     "crypto": "^1.0.1",
     "did-jwt": "^8.0.4",
     "flowbite": "^2.3.0",
