--- a/Sincero/package.json
+++ b/Sincero/package.json
@@ -10,10 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@blockchain-lab-um/masca-connector": "^1.3.2",
     "@formkit/nuxt": "^1.6.5",
     "@nuxt/image": "^1.7.0",
     "@radix-icons/react": "^1.0.0",
     "@vee-validate/zod": "^4.13.2",
+    "@veramo/core": "^6.0.0",
+    "@veramo/credential-w3c": "^6.0.0",
+    "@veramo/data-store": "^6.0.0",
+    "@veramo/did-manager": "^6.0.0",
+    "@veramo/did-provider-ethr": "^6.0.0",
+    "@veramo/did-provider-web": "^6.0.0",
+    "@veramo/did-resolver": "^6.0.0",
+    "@veramo/key-manager": "^6.0.0",
+    "@veramo/kms-local": "^6.0.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.10.0",
@@ -34,14 +44,17 @@
     "nuxt-security": "^2.0.0-rc.9",
     "radix-vue": "^1.8.3",
     "shadcn-nuxt": "^0.10.4",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
+    "typeorm": "^0.3.20",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
+    "web-did-resolver": "^2.0.27",
     "web3": "^4.10.0",
     "zod": "^3.23.8"
   },
@@ -50,6 +63,6 @@
     "@types/cookie": "^0.6.0",
     "nuxt": "^3.12.3",
     "nuxt-icon": "^0.6.10",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.4"
   }
 }
