--- a/Sincero/package.json
+++ b/Sincero/package.json
@@ -27,6 +27,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.10.0",
+    "@walletconnect/universal-provider": "^2.14.0",
     "axios": "^1.7.2",
     "base64-js": "^1.5.1",
     "class-variance-authority": "^0.7.0",
@@ -55,7 +56,7 @@
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "web-did-resolver": "^2.0.27",
-    "web3": "^4.10.0",
+    "web3": "^4.11.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
