--- a/Sincero/package.json
+++ b/Sincero/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@blockchain-lab-um/masca-connector": "^1.3.2",
     "@formkit/nuxt": "^1.6.5",
+    "@metamask/create-snap": "^4.0.2",
     "@nuxt/image": "^1.7.0",
     "@radix-icons/react": "^1.0.0",
     "@vee-validate/zod": "^4.13.2",
