--- a/Sincero/package.json
+++ b/Sincero/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@blockchain-lab-um/masca-connector": "^1.3.2",
+    "@blockchain-lab-um/masca-types": "^1.3.2",
     "@formkit/nuxt": "^1.6.5",
     "@metamask/create-snap": "^4.0.2",
     "@nuxt/image": "^1.7.0",
@@ -65,8 +66,8 @@
     "@types/cookie": "^0.6.0",
     "nuxt": "^3.12.3",
     "nuxt-icon": "^0.6.10",
-    "typescript": "^5.5.4",
-    "nx": "19.7.3"
+    "nx": "19.7.3",
+    "typescript": "^5.5.4"
   },
   "nx": {}
 }
